--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul> <!-- // fin du bloc orange -->
 
         <div > <!-- bloc orange -->
-            <button  id="btn1" type="button"> LOG IN</button>
+            <button  type="button" id="btn"> LOG IN</button>
             <button id="btn2" type="button"> START FREE</button>
         </div>
 
@@ -30,7 +30,7 @@
 
     <section>
         <div>
-            <p> <h1> Plans & Pricing</h1></p>
+             <h1> Plans & Pricing</h1>
             <p> MONTLY</p>
             <button type="button"> vert</button>
 
@@ -124,7 +124,7 @@
     </section>
 
 <div>
-    <p> <h4> Super charge your work with add-ons</h4></p>
+     <h4> Super charge your work with add-ons</h4>
 </div>
 
 <div class="offres-prix">
@@ -154,9 +154,10 @@
         </h4>
     </div>
 </section>
+
 <footer>
 
-</footer>
+
 <section class="questions-frequents">
     <div>
         <h2> Frequently Asked Questions</h2>
@@ -234,8 +235,7 @@
     </div>
 
 </section>
-
-</foote>
+</footer>
 
 </body>
 </html>
